<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/datos_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Validar_datos">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content_validar_datos"
        android:layout_width="371dp"
        android:layout_height="563dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imagen_usuario"
            android:layout_width="188dp"
            android:layout_height="132dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/descripcion_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user" />

        <Button
            android:id="@+id/boton_votar_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:onClick="verificar_datos"
            android:text="@string/ingresar_validar_datos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="367dp"
            android:layout_height="223dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ver_cedula_3">


            <TextView
                android:id="@+id/label_nombres_3"
                android:layout_width="90dp"
                android:layout_height="@dimen/height_text_view_1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_nombres_validar_datos"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ver_apellidos_3"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/string_vacia"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/label_apellidos_3"
                app:layout_constraintTop_toBottomOf="@+id/ver_nombres_3" />

            <TextView
                android:id="@+id/label_apellidos_3"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/label_apellidos_validar_datos"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_nombres_3" />

            <TextView
                android:id="@+id/label_codigo_3"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/label_codigo_validar_datos"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_apellidos_3" />

            <TextView
                android:id="@+id/label_clave_3"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/label_clave_validar_datos"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_codigo_3" />

            <TextView
                android:id="@+id/ver_nombres_3"
                android:layout_width="250dp"
                android:layout_height="@dimen/height_text_plain_1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/string_vacia"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/label_nombres_3"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/insertar_codigo_3"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/holo_blue_bright"
                android:ems="10"
                android:hint="@string/string_vacia"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/label_codigo_3"
                app:layout_constraintTop_toBottomOf="@+id/ver_apellidos_3"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/insertar_clave_3"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/holo_blue_bright"
                android:ems="10"
                android:hint="@string/string_vacia"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.021"
                app:layout_constraintStart_toEndOf="@+id/label_clave_3"
                app:layout_constraintTop_toBottomOf="@+id/insertar_codigo_3"
                tools:targetApi="o" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/ver_cedula_3"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/string_vacia"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagen_usuario" />

        <TextView
            android:id="@+id/alerta_texto_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/string_vacia"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_votar_3" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>